New form from JSON - https://github.com/Textalk/angular-schema-form.

--- a/app/modules/components/portlet/portlet.tpl.html
+++ b/app/modules/components/portlet/portlet.tpl.html
@@ -1,5 +1,5 @@
 <div class="panel" ng-class="className">
-    <div class="panel-heading">Header</div>
+    <div class="panel-heading">{{ header }}</div>
     <div class="panel-body" ng-transclude>
 
     </div>
