--- a/app/modules/components/portlet/portlet.tpl.html
+++ b/app/modules/components/portlet/portlet.tpl.html
@@ -1,7 +1,5 @@
 <div class="panel" ng-class="className">
     <div class="panel-heading">{{ header }}</div>
-    <div class="panel-body" ng-transclude>
-
-    </div>
+    <div class="panel-body" ng-transclude></div>
     <div ng-if="footerText" class="panel-footer">{{ footerText }}</div>
 </div>
