--- a/app/css/main.less
+++ b/app/css/main.less
@@ -10,7 +10,7 @@ body {
   width: 100%;
   height: 50px;
   position: fixed;
-  z-index: 9999;
+//  z-index: 9999;
   background: #000;
   color: #fff;
 }
